# cblearn

./: .coveragerc  .flake8  .gitattributes  .gitignore  .readthedocs.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build-paper-pdf.yaml  python-package.yml  release.yml  test.yml
cblearn/: __init__.py  _version.py
cblearn/cluster/: __init__.py  _comparison_hc.py
cblearn/cluster/tests/: test_comparison_hc.py
cblearn/core/: __init__.py  base_comparison.py  check_comparison.py  generate_comparison.py  type_comparison.py
cblearn/core/tests/: test_base_comparison.py  test_check_comparison.py  test_generate_comparisons.py
cblearn/datasets/: __init__.py  _base.py  _car_similarity.py  _datatypes.py  _food_similarity.py  _imagenet_similarity.py  _line.py  _linear_subspace.py  _material_similarity.py  _musician_similarity.py  _nature_vogue_similarity.py  _similarity_matrix.py  _things_similarity.py  _triplet_answers.py  _triplet_indices.py  _triplet_response.py  _triplet_simulation.py
cblearn/datasets/data/: musician_names.txt
cblearn/datasets/descr/: car_similarity.rst  food_similarity.rst  imagenet_similarity.rst  material_similarity.rst  musician_similarity.rst  nature_vogue_similarity.rst  similarity_matrix.rst  similarity_matrix_dataset.rst  things_similarity.rst
cblearn/datasets/tests/: test_food_similarity.py  test_line.py  test_linear_subspace.py  test_musician_similarity.py  test_things.py  test_triplet_indices.py  test_triplet_response.py
cblearn/embedding/: __init__.py  _align.py  _base.py  _ckl.py  _dims.py  _forte.py  _gnmds.py  _mlds.py  _oenn.py  _soe.py  _ste.py  _torch_utils.py
cblearn/embedding/tests/: test_sklearn_estimator_checks.py  test_soe.py
cblearn/embedding/wrapper/: __init__.py  _mlds.py  _r_base.py  _soe.py
cblearn/metrics/: __init__.py  _procrustes.py  _triplets.py
cblearn/metrics/tests/: test_procrustes.py  test_triplets.py
cblearn/preprocessing/: __init__.py  _label.py  _query.py
cblearn/preprocessing/tests/: test_query.py
cblearn/utils/: __init__.py  _data_format.py  _torch.py  _typing.py  _validate_data.py  _validate_size.py
cblearn/utils/tests/: test_validate_data.py
docs/: conf.py  index.rst  install.rst  sg_execution_times.rst
docs/contributor_guide/: index.rst
docs/datasets/: index.rst
docs/getting_started/: index.rst  quickstart.py
docs/references/: index.rst
docs/user_guide/: index.rst
examples/: cluster_cars.py  ordinal_embedding.py  plot_car_clusters.py  plot_psychophysical_scales.py  psychophysics.py  small_embedding_benchmark.py  triplet_formats.py
ordcomp/datasets/: __init__.py  _food_similarity.py  _musician_similarity.py  _triplet_answers.py  _triplet_generation.py  _triplet_indices.py  _triplet_responses.py  _triplet_simulation.py  triplets.py
ordcomp/datasets/descr/: food_similarity.rst  musician_similarity.rst
ordcomp/datasets/tests/: test_food_similarity.py  test_musician_similarity.py  test_triplet_generation.py  test_triplet_indices.py
ordcomp/embedding/: __init__.py  _base.py  _soe.py
ordcomp/embedding/tests/: test_sklearn_estimator_checks.py
ordcomp/embedding/wrapper/: __init__.py  _mlds.py  _r_base.py  _soe.py
ordcomp/metrics/: __init__.py  _triplets.py
ordcomp/metrics/tests/: test_procrustes.py  test_triplets.py
ordcomp/utils/: __init__.py  _data_format.py  _torch.py  _typing.py  transform.py
ordcomp/utils/tests/: test_transform.py  test_validate_data.py  test_validate_size.py
paper/: .gitignore  paper.md  references.bib  supplementary.md  supplementary.pdf+
