[build-system]
requires = ["setuptools", "wheel"]

[tool.pytest.ini_options]
addopts = "--doctest-modules -ra -v"
doctest_optionflags = "NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL"
testpaths = [
    "cblearn",
]
markers = [
    "sklearn: mark tests for sklearn compatibility.",
    "download: mark tests running downloads."
]
