# Static configuration of the distribution package, as defined by setuptools
[metadata]
name = cblearn
description = Comparison-based Machine Learning in Python.
long_description = file: README.md, LICENSE
author = 'David-Elias Künstle'
author_email = 'david-elias dot kuenstle at uni-tuebingen dot de'
url = 'https://github.com/dekuenstle/cblearn'
classifierts =
    Development Status :: 1 - Planning
    Environment :: GPU :: NVIDIA CUDA
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License  
    Programming Language :: Python
    Topic :: Software Development
    Topic :: Scientific/Engineering
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Typing :: Typed
description_file = README.md
license_files = LICENSE

[options]
python_requires = >=3.8
packages = find:
zip_safe = False
include_package_data = True
install_requires =
    numpy~=1.22
    scipy~=1.8
    scikit-learn~=1.1
    sparse~=0.13

[options.package_data]
* = cblearn/datasets/data/*.txt cblearn/datasets/descr/*.rst

[options.extras_require]
torch =
    torch~=1.11
r_wrapper =
    rpy2~=3.5
octave_wrapper =
    oct2py~=5.5
wrapper =
    rpy2~=3.5
    oct2py~=5.5
tests =
    pytest~=7.1
    pytest-cov>=3,<5
    pytest-doctestplus~=0.12
    pytest-remotedata~=0.3
    flake8~=4.0
    mypy~=0.950
    pandas~=1.4
docs =
    sphinx~=4.5
    sphinx_rtd_theme~=1.0
    sphinx-gallery~=0.10
    matplotlib~=3.5


[build_sphinx]
all-files = 1
source-dir = docs/
build-dir = docs/_build
warning-is-error = 1
