# Static configuration of the distribution package, as defined by setuptools
[metadata]
name = cblearn
description = Comparison-based Machine Learning in Python.
long_description = file: README.md, CHANGELOG.md, LICENSE
long_description_content_type = text/markdown
author = David-Elias Künstle
author_email = david-elias.kuenstle@uni-tuebingen.de
url = https://github.com/dekuenstle/cblearn
classifiers =
    Development Status :: 1 - Planning
    Environment :: GPU :: NVIDIA CUDA
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Topic :: Software Development
    Topic :: Scientific/Engineering
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Typing :: Typed

[options]
python_requires = >=3.9
packages = find:
zip_safe = False
include_package_data = True
install_requires =
    numpy~=1.26  # numba 0.57 requires numpy <1.25
    scipy~=1.11
    scikit-learn~=1.3
    sparse~=0.15
    numba>=0.58  # force numba version supporting py3.11


[options.package_data]
* = cblearn/datasets/data/*.txt cblearn/datasets/descr/*.rst

[options.extras_require]
torch =
    torch~=2.1
r_wrapper =
    rpy2~=3.5
octave_wrapper =
    oct2py~=5.6
tests =
    pytest~=7.4
    pytest-cov~=4.1
    pytest-doctestplus~=1.1
    pytest-remotedata~=0.4
    flake8~=7.0
    mypy~=1.8
    pandas~=2.1
    matplotlib~=3.8
docs =
    sphinx~=7.2
    sphinx_rtd_theme~=2.0
    sphinx-gallery~=0.15
    matplotlib~=3.8

[build_sphinx]
all-files = 1
source-dir = docs/
build-dir = docs/_build
warning-is-error = 1


[versioneer]
VCS = git
style = pep440
versionfile_source = cblearn/_version.py
versionfile_build = cblearn/_version.py
tag_prefix =
parentdir_prefix =
